style.css
:root{
    --Teal-500: hsl(179, 62%, 43%);
    --Teal-500-alpha: hsla(179, 62%, 43%, 0.664);
    --Green-400: hsl(71, 73%, 54%);
    --Teal-100: hsl(204, 43%, 93%);
    --Gray-500: hsl(216, 22%, 67%);
    --Gray-500-alpha: hsla(216, 22%, 67%, 0.486);
    --white: #fff;
}

*,
*::before,
*::after{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    min-height:100vh ;
    font-family: "Karla",sans-serif;
    background-color: var(--Gray-500-alpha);
    position: relative;
}

.main{
    min-height: 100vh;
    display: grid;
    grid-template-columns:350px 350px;
    grid-template-rows:auto auto;
    place-content: center;
}

.join{
    background-color: var(--white);
    grid-column: 1/3;
    padding: 2.5em;
    padding-bottom: 3em;
    border-radius: 10px 10px 0 0;
}

.join h1{
    color: var(--Teal-500);
    font-weight: 700;
    margin-bottom: 0.6em;
}

.join h2{
    color: var(--Green-400);
    margin-bottom: 0.5em;
}
.join p{
    color: var(--Gray-500);
}

.subscription{
    background-color: var(--Teal-500);
    grid-column: 1;
    grid-row: 2;
    padding: 2.5em;
    border-radius: 0 0 0 10px;
    text-align: start;
}

.subscription h2{
    color: var(--white);
    margin-bottom: 0.8em;
}

.subscription h2+p{
    display: flex;
    align-items: center;
    gap:0.8rem
}

.subscription .dollar{
    color: var(--white);
    font-size: 2rem;
    font-weight: 700;
}

.subscription .per-month{
    color: #ccc;
}

.subscription :nth-child(3){
    color: #ccc;
    margin-top: 0.5em;
}

.btn{
    font-family: inherit;
    background-color: var(--Green-400);
    font-size: inherit;
    border: 0;
    width:100% ;
    margin-top: 2em;
    padding: 1em;
    color:var(--white) ;
    border-radius:6px ;
    border: 2px solid var(--Green-400);
}

.btn:hover,
.btn:focus{
    cursor: pointer;
    background-color: cyan;
    border: 2px solid coral;
}

.why-us{
    background-color: var(--Teal-500-alpha);
    grid-column: 2;
    grid-row: 2;
    border-radius: 0 0 10px 0;
    padding: 2.5em;
}

.why-us h2{
    color: var(--white);
    margin-bottom: 0.8em;
}

.why-us p{
    color:var(--Teal-100) ;
    padding-right: 3.5em;
}

.attribution { 
    font-size: 11px; 
    text-align: center;
    position: absolute;
    bottom: -5rem;
    left: 50%;
}
.attribution a { 
    color: hsl(228, 45%, 44%);
    font-size: 1.5rem; 
    text-decoration:none ;
}
.attribution a:hover,
.attribution a:focus{
    color: coral;
    text-decoration:2px var(--Green-400) underline;
}

@media screen and (max-width:768px) {
    .main{
        grid-template-columns: 400px;
        grid-template-rows: auto auto auto;
        margin:5em 0 ;
    }

    .join{
        grid-column:1 ;
        grid-row:1 ;
        border-radius: 10px 10px 0 0;
    }
    .subscription{
        grid-column:1 ;
        grid-row:2 ;
        border-radius:0 ;
    }
    .why-us{
        grid-column:1 ;
        grid-row:3 ;
        border-radius:0 0 10px 10px ;
    }
}

@media screen and (max-width:420px) {
    .main{
        grid-template-columns: 300px;
    }
}

